spring-rest/spring-rest-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-rest-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-rest
spec:
  hosts:
  - "*"
  gateways:
  - spring-rest-gateway
  http:
  - match:
    - uri:
        exact: /tcp
    route:
    - destination:
        host: spring-rest
        port:
          number: 8080
